--- a/sass/layout/_card.scss
+++ b/sass/layout/_card.scss
@@ -4,6 +4,7 @@
   position: relative;
   border-radius: 5em;
   margin-bottom: 1em;
+  @include box-shadow;
   img {
     width: 100%;
     height: 16em;
