--- a/sass/main.css
+++ b/sass/main.css
@@ -41,6 +41,18 @@ body {
   max-width: -moz-fit-content;
   max-width: fit-content;
   text-align: center;
+  -webkit-transition: opacity 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out, box-shadow 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
+  -webkit-box-shadow: 0px 4px 12px -2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 4px 12px -2px rgba(0, 0, 0, 0.2);
+}
+
+.button:hover {
+  opacity: 0.9;
+  -webkit-box-shadow: 0px 4px 12px -2px rgba(0, 0, 0, 0.4);
+          box-shadow: 0px 4px 12px -2px rgba(0, 0, 0, 0.4);
 }
 
 .title {
@@ -79,6 +91,10 @@ body {
 .heart:hover .heart--full {
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
 }
 
 .heart--empty {
@@ -98,10 +114,6 @@ body {
   position: absolute;
   -webkit-transform: translate(-50%, -50%) scale(0);
           transform: translate(-50%, -50%) scale(0);
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
-  transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s;
   overflow: hidden;
   color: #000;
 }
@@ -243,6 +255,8 @@ section {
   position: relative;
   border-radius: 5em;
   margin-bottom: 1em;
+  -webkit-box-shadow: 0px 4px 12px -2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 4px 12px -2px rgba(0, 0, 0, 0.2);
 }
 
 .card img {
@@ -300,6 +314,8 @@ section {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  -webkit-box-shadow: 0px 4px 12px -2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 4px 12px -2px rgba(0, 0, 0, 0.2);
 }
 
 .food:hover .food__animation {
@@ -536,6 +552,8 @@ section {
   margin-left: 0.5em;
   -webkit-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
+  -webkit-box-shadow: 0px 4px 12px -2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 4px 12px -2px rgba(0, 0, 0, 0.2);
 }
 
 .fonctionnement__card span {
