--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/var";
+@import "./utils/mixins";
 @import "./base/base";
 @import "./composants/button";
 @import "./composants/title";
