--- a/sass/composants/_banner.scss
+++ b/sass/composants/_banner.scss
@@ -1,6 +1,8 @@
 .banner {
+  object-fit: cover;
   width: 100%;
   position: relative;
   z-index: -1;
   margin-bottom: -1.5em;
+  height: 16em;
 }
