--- a/sass/layout/_food.scss
+++ b/sass/layout/_food.scss
@@ -19,6 +19,10 @@
       animation: rotate 0.6s ease-in-out;
     }
   }
+  .food__info p:first-child {
+    min-width: calc(100% - 2em);
+  }
+
   .food__info p:nth-child(2) {
     transform: translateX(0);
   }
@@ -39,14 +43,15 @@
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
-      max-width: 90%;
+      min-width: calc(100%);
+      transition: min-width 0.4s;
     }
     &:nth-child(2) {
       width: 1em;
       justify-self: flex-end;
       margin: 0 0.5em;
-      transform: translateX(3em);
-      transition: transform 0.7s;
+      transform: translateX(1em);
+      transition: transform 0.8s;
       font-weight: 700;
     }
   }
@@ -77,6 +82,10 @@
 
 .food--anim3 {
   animation-delay: 0.6s;
+}
+
+.food--anim4 {
+  animation-delay: 0.8s;
 }
 
 @keyframes rotate {
