--- a/sass/main.css
+++ b/sass/main.css
@@ -86,43 +86,60 @@ body {
 
 .heart {
   position: relative;
+  width: 25px;
+  height: 25px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-right: 1em;
+  cursor: pointer;
+  margin-left: auto;
 }
 
-.heart:hover .heart--full {
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
-  transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s;
+.heart:hover .heart__full {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  opacity: 1;
+  -webkit-transition: opacity 0.2s cubic-bezier(0.76, -0.08, 1, 1), -webkit-transform 0.3s cubic-bezier(0.46, -0.04, 0.69, 1.38);
+  transition: opacity 0.2s cubic-bezier(0.76, -0.08, 1, 1), -webkit-transform 0.3s cubic-bezier(0.46, -0.04, 0.69, 1.38);
+  transition: transform 0.3s cubic-bezier(0.46, -0.04, 0.69, 1.38), opacity 0.2s cubic-bezier(0.76, -0.08, 1, 1);
+  transition: transform 0.3s cubic-bezier(0.46, -0.04, 0.69, 1.38), opacity 0.2s cubic-bezier(0.76, -0.08, 1, 1), -webkit-transform 0.3s cubic-bezier(0.46, -0.04, 0.69, 1.38);
 }
 
-.heart--empty {
-  font-size: 1.5em;
-  top: 50%;
-  right: 50%;
+.heart:hover .heart__empty {
+  -webkit-transform: scale(0.85);
+          transform: scale(0.85);
+}
+
+.heart__empty {
+  top: 0;
+  right: 0;
   position: absolute;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.04, 0.7, 0.68, 1.1);
+  transition: -webkit-transform 0.2s cubic-bezier(0.04, 0.7, 0.68, 1.1);
+  transition: transform 0.2s cubic-bezier(0.04, 0.7, 0.68, 1.1);
+  transition: transform 0.2s cubic-bezier(0.04, 0.7, 0.68, 1.1), -webkit-transform 0.2s cubic-bezier(0.04, 0.7, 0.68, 1.1);
 }
 
-.heart--full {
+.heart__full {
   font-weight: 400;
-  font-size: 1.5em;
-  top: 50%;
-  right: 50%;
+  top: 0;
+  right: 0;
   position: absolute;
-  -webkit-transform: translate(-50%, -50%) scale(0);
-          transform: translate(-50%, -50%) scale(0);
-  overflow: hidden;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  opacity: 0;
   color: #000;
 }
 
 .banner {
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   position: relative;
   z-index: -1;
   margin-bottom: -1.5em;
+  height: 16em;
 }
 
 .text {
@@ -328,6 +345,10 @@ section {
           animation: rotate 0.6s ease-in-out;
 }
 
+.food:hover .food__info p:first-child {
+  min-width: calc(100% - 2em);
+}
+
 .food:hover .food__info p:nth-child(2) {
   -webkit-transform: translateX(0);
           transform: translateX(0);
@@ -356,19 +377,21 @@ section {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  max-width: 90%;
+  min-width: calc(100%);
+  -webkit-transition: min-width 0.4s;
+  transition: min-width 0.4s;
 }
 
 .food__info p:nth-child(2) {
   width: 1em;
   justify-self: flex-end;
   margin: 0 0.5em;
-  -webkit-transform: translateX(3em);
-          transform: translateX(3em);
-  -webkit-transition: -webkit-transform 0.7s;
-  transition: -webkit-transform 0.7s;
-  transition: transform 0.7s;
-  transition: transform 0.7s, -webkit-transform 0.7s;
+  -webkit-transform: translateX(1em);
+          transform: translateX(1em);
+  -webkit-transition: -webkit-transform 0.8s;
+  transition: -webkit-transform 0.8s;
+  transition: transform 0.8s;
+  transition: transform 0.8s, -webkit-transform 0.8s;
   font-weight: 700;
 }
 
@@ -411,6 +434,11 @@ section {
 .food--anim3 {
   -webkit-animation-delay: 0.6s;
           animation-delay: 0.6s;
+}
+
+.food--anim4 {
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
 }
 
 @keyframes rotate {
