--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -23,6 +23,18 @@ button {
 
 body {
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   background-color: $color-background;
+  @media (min-width: 375px) {
+    font-size: 16px;
+  }
+  @media (min-width: 450px) {
+    font-size: 18px;
+  }
+  @media (min-width: 1024px) {
+    font-size: 20px;
+  }
+  @media (min-width: 2000px) {
+    font-size: 30px;
+  }
 }
