--- a/sass/composants/_banner.scss
+++ b/sass/composants/_banner.scss
@@ -5,4 +5,13 @@
   z-index: -1;
   margin-bottom: -1.5em;
   height: 16em;
+  @media (min-width: 450px) {
+    height: 20em;
+  }
+  @media (min-width: 700px) {
+    height: 28em;
+  }
+  @media (min-width: 1024px) {
+    height: 34em;
+  }
 }
