--- a/sass/composants/_title.scss
+++ b/sass/composants/_title.scss
@@ -1,17 +1,20 @@
 .title {
   font-size: 1.6em;
   font-weight: 700;
-  padding: 0.5em 0;
+  padding-bottom: 1em;
 }
 
 .title--font {
   font-family: "Shrikhand";
+  padding: 0.5em 0;
 }
 
 .title--light {
   font-weight: 300;
   text-transform: uppercase;
   font-size: 1.2em;
+  padding: 0.5em 0;
+  opacity: 0.8;
 }
 
 .title--underline {
