--- a/sass/layout/_card.scss
+++ b/sass/layout/_card.scss
@@ -4,23 +4,36 @@
   position: relative;
   border-radius: 5em;
   margin-bottom: 1em;
-  @include box-shadow;
   img {
     width: 100%;
     height: 16em;
     border-radius: 1em;
     object-fit: cover;
+    @media (min-width: 450px) {
+      height: 20em;
+    }
+    @media (min-width: 450px) {
+      height: 20em;
+    }
+
+    @media (min-width: 700px) {
+      height: 25em;
+    }
+    @media (min-width: 1024px) {
+      height: 35em;
+    }
   }
 }
 
 .card--new::before {
   content: "Nouveau";
-  color: green;
+  color: #0b8f72;
+  font-size: 0.8em;
   background: $color-tertiary;
   position: absolute;
-  right: 5%;
-  top: 5%;
-  padding: 0.3em 0.5em;
+  right: calc(0% + 1em);
+  top: calc(0% + 1em);
+  padding: 0.4em 0.8em;
   border-radius: 0.2em;
   font-weight: 500;
 }
@@ -34,6 +47,7 @@
   width: 100%;
   border-radius: 0 0 1em 1em;
   padding: 1em 1em;
+  @include box-shadow;
   p {
     font-weight: 300;
   }
