--- a/sass/pages/_fonctionnement.scss
+++ b/sass/pages/_fonctionnement.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   gap: 1.5em;
   font-weight: 500;
+  max-width: 600px;
+  margin: 0 auto;
 }
 .fonctionnement__card {
   display: flex;
