--- a/sass/composants/_title.scss
+++ b/sass/composants/_title.scss
@@ -2,6 +2,9 @@
   font-size: 1.6em;
   font-weight: 700;
   padding-bottom: 1em;
+  @media (min-width: 700px) {
+    text-align: center;
+  }
 }
 
 .title--font {
