--- a/sass/layout/_card.scss
+++ b/sass/layout/_card.scss
@@ -4,23 +4,16 @@
   position: relative;
   border-radius: 5em;
   margin-bottom: 1em;
+  @media (min-width: 700px) {
+    width: calc(50% - 1em);
+  }
   img {
     width: 100%;
     height: 16em;
     border-radius: 1em;
     object-fit: cover;
-    @media (min-width: 450px) {
-      height: 20em;
-    }
-    @media (min-width: 450px) {
-      height: 20em;
-    }
-
-    @media (min-width: 700px) {
-      height: 25em;
-    }
     @media (min-width: 1024px) {
-      height: 35em;
+      height: 20em;
     }
   }
 }
